--- a/style.css
+++ b/style.css
@@ -769,6 +769,8 @@ label {
   flex-direction: column;
   gap: 1.25rem;
   padding-block: 2rem;
+  max-width: 800px;
+  margin: 0 auto;
 }
 
 .dream-cast-card {
@@ -777,7 +779,7 @@ label {
   border-radius: 8px;
   padding: 1.5rem;
   box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.1);
-  max-width: 800px;
+  width: 100%;
   margin-inline: auto;
 }
 
