--- a/style.css
+++ b/style.css
@@ -925,10 +925,12 @@ label {
 }
 
 .modal-content img {
+  max-width: 300px;
   width: 100%;
   height: auto;
-  border: 4px solid white;
-  border-radius: 8px;
+  image-rendering: pixelated;
+  display: block;
+  margin: 0 auto;
 }
 
 .close {
