--- a/style.css
+++ b/style.css
@@ -928,11 +928,11 @@ label {
   cursor: pointer;
 }
 
-.dreamcast-hero-img {
+.dreamcast-stupid-img {
   display: block;
   margin: 1rem auto 1.5rem auto;
   width: 100%;           /* Add this */
-  max-width: 100px;      /* Adjust to whatever size you prefer */  height: auto;
+  max-width: 400px;      /* Adjust to whatever size you prefer */  height: auto;
   object-fit: cover;
   border: 6px solid #5E2B97;
   border-radius: 8px;
