--- a/style.css
+++ b/style.css
@@ -1018,3 +1018,23 @@ label {
   font-weight: 700 !important;
   font-family: 'Inter', sans-serif !important;
 }
+
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+
+.card-link {
+  display: flex;
+  flex: 1 1 calc(50% - 0.5rem);
+  text-decoration: none;
+  color: inherit;
+}
+
+.card.blog-post {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100%;
+}
