--- a/style.css
+++ b/style.css
@@ -785,6 +785,7 @@ label {
   align-items: center;
   gap: 1rem;
   max-width: 960px;
+  min-width: 800px;
   margin: 0 auto;
   padding: 2rem 1rem;
 }
